# dnsserver

./: .gitignore  CMakeLists.txt  Readme.md  a.cpp  a.hpp  a.out  binaryreader.cpp  binarywriter.cpp  build.sh  client  client.cpp  dnspacketutil.h  dnsserver.cpp  dnsserver.sln  dnsserver.vcxproj  dnsserver.vcxproj.filters  endian.h  main.py  run.sh  server  server.cpp  test.cpp  test.py  tmp.html
nslookup/: libbb.h  platform.h  test.cpp
old/: client.cpp  dnspackets.py  main.py  server.cpp
packet/: dnspacket.cpp  dnspacket.hpp  dnspacketutil.hpp
packet/records/: additional.cpp  additional.hpp  answer.cpp  answer.hpp  authority.cpp  authority.hpp  header.cpp  header.hpp  preamble.cpp  preamble.hpp  question.cpp  question.hpp
packet/records/answer/: aaaarecord.cpp  aaaarecord.hpp  arecord.cpp  arecord.hpp
records/: additional.hpp  answer.cpp  answer.hpp  authority.cpp  authority.hpp  header.cpp  header.hpp  preamble.cpp  preamble.hpp  question.cpp  question.hpp  records.cpp
sitesnippet/: sitesnippet.cpp  sitesnippet.hpp
utils/: binaryreader.cpp  binaryreader.hpp  binarywriter.cpp  binarywriter.hpp
